# METIS

./: CMakeLists.txt
conf/: gkbuild.cmake
libmetis/: CMakeLists.txt
